--- a/style.css
+++ b/style.css
@@ -81,3 +81,46 @@ button {
     display: flex;
     flex-direction: column;
 }
+
+.section1 h1 {
+    margin: 0;
+}
+
+.section1 p {
+    margin: 8;
+}
+
+/* SECTION 2 */
+.section2 {
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+    padding: 36px;
+}
+
+.boxes {
+    display: flex;
+    gap: 24px;
+}
+
+.box-with-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.box-with-text p {
+    width: 120px;
+}
+
+.box {
+    border: 4px solid #3882F6;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 16px;
+    width: 48px;
+    height: 48px;
+    padding: 20px;
+  }
+
