--- a/style.css
+++ b/style.css
@@ -143,6 +143,37 @@ button {
 .quote-source {
     margin: 0;
     margin-right: 24px;
+    margin-top: 8px;
     text-align: right;
     font-weight: bold;
+}
+
+/* SECTION 4 */
+.section4{
+    justify-content: center;
+    align-items: center;
+    padding: 48px;
+}
+.section4 .container {
+    display: flex;
+    flex-direction: row;
+    width: 800px;
+    justify-content: space-around;
+    align-items: center;
+    border: none;
+    border-radius: 8px;
+    padding: 8px;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    text-align: left;
+}
+
+.section4 .container .container {
+    display: flex;
+    flex-direction: column;
+}
+
+.cta-button {
+    border: #E5E7EB;
+    border-width: 8px;
 }
